# DeepSummit-v2

./: .gcloudignore  .gitignore  ARCHITECTURE.md  Brewfile  COMMIT_CONVENTION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/himalayas/: expeditions_clean.csv  peaks.xls  peaks_clean.csv
docs/documentation/: ARCHITECTURE.md  COMMIT_CONVENTION.md  FRONTEND_ARCHITECTURE.md  MODEL_ARCHITECTURE.md  TRAINING_DATA_PIPELINE.md  TRAINING_DEPLOYMENT_PIPELINE.md  TRANSFORMER_MATH_GUIDE.md
embedding_pipeline/: Dockerfile  db.py  embedder.py  main.py  pipeline.py  pyproject.toml
embedding_pipeline/embedding_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
embedding_pipeline/tests/: conftest.py  test_api.py  test_db.py  test_embedder.py  test_pipeline.py
frontend/app/: .firebaserc  .gitignore  index.html  package-lock.json  package.json
frontend/app/src/: App.tsx  main.tsx
frontend/app/src/components/pages/: MapView.tsx  PeakView.tsx  index.ts
frontend/app/src/data/: peaks.ts
frontend/app/src/styles/: globals.css
frontend/app/src/types/: peak.ts
hooks/: read_hook.py
ml/: __init__.py
ml/model/: __init__.py  attention.py  embeddings.py  encoder.py  ffn.py  head.py  normalization.py  regularization.py  tokenizer.py  transformer.py
scripts/: backup_db.sh  build_training_data.py  enrich_peak_coordinates.py  preprocess_hdb.py  restore_db.sh  seed_expeditions.py  setup_gcs.sh  trigger_pipeline.py
tests/unit/: test_attention.py  test_encoder.py  test_ffn.py  test_head.py  test_normalization.py  test_placeholder.py  test_regularization.py  test_transformer.py
tests/utils/: test_geocoding.py  test_rate_limiter.py  test_weather.py
utils/: __init__.py  geocoding.py  pubsub.py  rate_limiter.py  weather.py
