[project]
name = "deepsummit-v2"
version = "0.1.0"
description = "Predict mountaineering expedition success on all 14 eight-thousanders"
requires-python = ">=3.11"
dependencies = [
    # Phase 1: Data Pipeline
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "xlrd>=2.0.0",
    "python-calamine>=0.2.0",
]

[project.optional-dependencies]
ml = [
    # Phase 2: ML Training & Inference
    "torch>=2.2.0",
    "wandb>=0.16.0",
    "scikit-learn>=1.4.0",
    "shap>=0.44.0",
    "bentoml>=1.2.0",
    "evidently>=0.4.0",
    "pandera>=0.18.0",
]
backend = [
    # Phase 3: Backend API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
    "types-tqdm>=4.66.0",
]
all = [
    "deepsummit-v2[ml,backend,dev]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["utils*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
